--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   nginx:
-    image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${APPLICATION_NAME}-nginx
+    image: 957441879904.dkr.ecr.us-east-1.amazonaws.com/test-nginx
     restart: always
     build:
       context: ./nginx
